test/errors/1 - Errors should be visible feature.js
description: 'Input errors should be visible',

scenario: [
	{
		'ErrorWidget.title': true,
	}
]
